force-app/main/default/objects/Address__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Pay-To</fullName>
            </value>
            <value>
                <fullName>Sold-To</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>