force-app/main/default/objects/Address__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkOrder</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>